--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,4 @@ PORT=3000
 SERVER_URL=http://localhost:3000
 
 # Database
-DATABASE_URL=""
-
+MONGODB_DATABASE_URL=mongodb://localhost:27017/email_service_db_logger
