--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
         "dotenv-flow": "^4.1.0",
         "express": "^5.2.1",
         "helmet": "^8.1.0",
+        "mongoose": "^9.1.2",
         "source-map-support": "^0.5.21",
         "ts-migrate-mongoose": "^4.2.0",
-        "winston": "^3.19.0"
+        "winston": "^3.19.0",
+        "winston-mongodb": "^7.0.1"
     }
 }
