--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ SERVER_URL=http://localhost:3000
 
 # Database
 MONGODB_DATABASE_URL=mongodb://localhost:27017/email_service_db_logger
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/email_queue
