--- a/package.json
+++ b/package.json
@@ -44,9 +44,12 @@
         "cors": "^2.8.5",
         "cross-env": "^10.1.0",
         "dotenv-flow": "^4.1.0",
+        "drizzle-kit": "^0.31.8",
+        "drizzle-orm": "^0.45.1",
         "express": "^5.2.1",
         "helmet": "^8.1.0",
         "mongoose": "^9.1.2",
+        "postgres": "^3.4.7",
         "source-map-support": "^0.5.21",
         "ts-migrate-mongoose": "^4.2.0",
         "winston": "^3.19.0",
