--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "drizzle-orm": "^0.45.1",
         "express": "^5.2.1",
         "helmet": "^8.1.0",
+        "joi": "^18.0.2",
         "mongoose": "^9.1.2",
         "postgres": "^3.4.7",
         "source-map-support": "^0.5.21",
