feat: Chaching and invalidating chache in api service

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ SERVER_URL=http://localhost:3000
 # Database
 MONGODB_DATABASE_URL=mongodb://localhost:27017/email_service_db_logger
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/email_queue
+ENCRYPTION_KEY=your-32-character-minimum-encryption-key
+REDIS_URL=redis://localhost:6379
+GLOBAL_RATE_LIMIT=100
+API_KEY_CACHE_TTL=300
