feat: Added auth feature

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ ENCRYPTION_KEY=your-32-character-minimum-encryption-key
 REDIS_URL=redis://localhost:6379
 GLOBAL_RATE_LIMIT=100
 API_KEY_CACHE_TTL=300
+JWT_SECRET=your-very-secure-secret-key-here
+JWT_REFRESH_SECRET=your-very-secure-refresh-secret-key-here
