--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
         "db:generate": "drizzle-kit generate",
         "db:migrate": "drizzle-kit migrate",
         "db:push": "drizzle-kit push",
-        "db:studio": "drizzle-kit studio"
+        "db:studio": "drizzle-kit studio",
+        "cli:signup": "ts-node src/cli/authCli.ts signup",
+        "cli:reset-init": "ts-node src/cli/authCli.ts reset-init",
+        "cli:reset-complete": "ts-node src/cli/authCli.ts reset-complete"
     },
     "author": "Bablu Singh",
     "license": "ISC",
@@ -31,6 +34,7 @@
         "@eslint/js": "^9.39.2",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.6",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^25.0.3",
         "@types/source-map-support": "^0.5.10",
         "eslint": "^9.39.2",
@@ -54,6 +58,7 @@
         "helmet": "^8.1.0",
         "ioredis": "^5.9.1",
         "joi": "^18.0.2",
+        "jsonwebtoken": "^9.0.3",
         "mongoose": "^9.1.2",
         "postgres": "^3.4.7",
         "source-map-support": "^0.5.21",
