--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@commitlint/cli": "^20.3.0",
         "@commitlint/config-conventional": "^20.3.0",
         "@eslint/js": "^9.39.2",
+        "@types/cookie-parser": "^1.4.10",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.6",
         "@types/jsonwebtoken": "^9.0.10",
@@ -49,6 +50,7 @@
     },
     "dependencies": {
         "colorette": "^2.0.20",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "cross-env": "^10.1.0",
         "dotenv-flow": "^4.1.0",
